--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest",
     "start": "nodemon index.js"
   },
   "keywords": [],
@@ -22,5 +22,8 @@
     "mysql": "^2.18.1",
     "nodemon": "^3.1.4",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "vitest": "^2.1.1"
   }
 }
